--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,16 @@
+{% load static %}
 <html>
 	<head>
 		<title>Django procrt blog</title>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin, latin-ext" rel="stylesheet" type="text/css">
+
 	</head>
 	<body>
 		<div>
-			<h1><a href="">Django procrt Blog</a></h1>
+			<h1><a href="/">Django procrt Blog</a></h1>
 		</div>
 		
 		{% for post in posts %}
